[gd_scene load_steps=7 format=3 uid="uid://7wtij707stht"]

[ext_resource type="Script" uid="uid://di3xy4fn8ivv" path="res://Scripts/TTSSettingsPopup.gd" id="1_y2dfs"]
[ext_resource type="FontFile" uid="uid://l1q8mfvbxty3" path="res://Fonts/dyslexiafont/OpenDyslexic-Regular.otf" id="2_m3f5r"]
[ext_resource type="Texture2D" uid="uid://dlusv4b6bm07h" path="res://gui/Update/UI/ui 10.png" id="2_umhyu"]
[ext_resource type="Texture2D" uid="uid://5kclvhwf1uke" path="res://gui/Update/UI/green button.png" id="4_7wrw6"]
[ext_resource type="FontFile" uid="uid://bdlqaeel30c00" path="res://Fonts/dyslexiafont/OpenDyslexic-Bold.otf" id="5_jb0wy"]
[ext_resource type="Texture2D" uid="uid://cylxg6njg7bam" path="res://gui/Update/UI/yellow button.png" id="6_e2f2d"]

[node name="TTSSettingsPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y2dfs")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -362.0
offset_top = -142.0
offset_right = 377.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="TextureRect" parent="."]
custom_minimum_size = Vector2(400, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.0
offset_top = -175.0
offset_right = 332.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_umhyu")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_m3f5r")
theme_override_font_sizes/font_size = 20
text = "Text-to-Speech Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="VoiceContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/VoiceContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_m3f5r")
theme_override_font_sizes/font_size = 18
text = "Voice:"
horizontal_alignment = 1

[node name="VoiceOptionButton" type="OptionButton" parent="Panel/VBoxContainer/VoiceContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_m3f5r")
theme_override_font_sizes/font_size = 16

[node name="RateContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/RateContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_m3f5r")
theme_override_font_sizes/font_size = 18
text = "Speech Rate:"

[node name="RateSlider" type="HSlider" parent="Panel/VBoxContainer/RateContainer"]
visible = false
layout_mode = 2
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="RateValueLabel" type="Label" parent="Panel/VBoxContainer/RateContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_m3f5r")
theme_override_font_sizes/font_size = 16
text = "Rate: 1.0 (Normal)"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_m3f5r")
theme_override_font_sizes/font_size = 14
text = "Loading voices..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="TestButton" type="Button" parent="Panel"]
layout_mode = 2
offset_left = 180.0
offset_top = 279.0
offset_right = 242.0
offset_bottom = 303.0
scale = Vector2(2.08295, 2.10011)
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_jb0wy")
theme_override_font_sizes/font_size = 5
text = "Test Button"
icon = ExtResource("4_7wrw6")
flat = true
icon_alignment = 1

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 2
offset_left = 300.0
offset_top = 275.0
offset_right = 362.0
offset_bottom = 304.0
scale = Vector2(2.25382, 2.0651)
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_jb0wy")
theme_override_font_sizes/font_size = 5
text = "Save & Close"
icon = ExtResource("6_e2f2d")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="item_selected" from="Panel/VBoxContainer/VoiceContainer/VoiceOptionButton" to="." method="_on_voice_option_button_item_selected"]
[connection signal="value_changed" from="Panel/VBoxContainer/RateContainer/RateSlider" to="." method="_on_rate_slider_value_changed"]
[connection signal="pressed" from="Panel/TestButton" to="." method="_on_test_button_pressed"]
[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close_button_pressed"]
